--- a/src/assets/scss/black-dashboard-react/custom/_variables.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_variables.scss
@@ -96,27 +96,27 @@ $colors: map-merge((
 $default-color-opacity:      rgba(182, 182, 182, .6) !default;
 $orange-color:               #f96332 !default;
 
-$default:       #344675 !default;
-$primary:       #e14eca !default;
+$default:       #1f2937 !default;
+$primary:       #6c5dd3 !default;
 $secondary:     #f4f5f7 !default;
-$success:       #00f2c3 !default;
-$info:          #1d8cf8 !default;
-$warning:       #ff8d72 !default;
-$danger:        #fd5d93 !default;
-$black:         #222a42 !default;
+$success:       #1bc5bd !default;
+$info:          #17c3e3 !default;
+$warning:       #f6c343 !default;
+$danger:        #e0445e !default;
+$black:         #0a0b1e !default;
 
 
 // gradient
-$default-states:       #263148 !default;
-$primary-states:       #ba54f5 !default;
-$success-states:       #0098f0 !default;
-$info-states:          #3358f4 !default;
-$warning-states:       #ff6491 !default;
-$danger-states:        #ec250d !default;
-$black-states:         #1d253b !default;
+$default-states:       #141824 !default;
+$primary-states:       #5841c8 !default;
+$success-states:       #159a93 !default;
+$info-states:          #0f9ac2 !default;
+$warning-states:       #d8a72f !default;
+$danger-states:        #c5364e !default;
+$black-states:         #141624 !default;
 
-$background-black:           #1e1e2f !default;
-$background-states-black:    #1e1e24 !default;
+$background-black:           #0e0f1a !default;
+$background-states-black:    #141624 !default;
 
 // opacity
 $default-opacity:      rgba(182, 182, 182, .6) !default;
@@ -376,8 +376,8 @@ $general-transition-time:     300ms             !default;
 
 // Fonts
 
-$font-family-base:            'Poppins', sans-serif !default;
-$font-family-alt:             'Poppins', sans-serif !default;
+$font-family-base:            'Inter', sans-serif !default;
+$font-family-alt:             'Inter', sans-serif !default;
 
 $font-size-dash:              .875rem !default;
 
